bug fixes, got rid of bootstrap for the main panel, session remains

--- a/example-settings.json
+++ b/example-settings.json
@@ -5,6 +5,7 @@
             "printToConsole": true,
             "logUser": true,
             "logHttp": true,
+            "logDDP": true,
             "prohibitAutoPublish": false
         }
     }
