--- a/example-settings.json
+++ b/example-settings.json
@@ -1,6 +1,7 @@
 {
     "public": {
         "observatorySettings": {
+            "logsCollectionName": "_observatory_logs",
             "logLevel": "LOGLEVEL_DEBUG",
             "printToConsole": true,
             "logUser": true,
